--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.6.2",
+    "chai": "^4.1.2",
     "jquery": "^3.1.1",
-    "karma": "^1.5.0",
+    "karma": "^1.7.1",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-ng-html2js-preprocessor": "^1.0.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^3.2.0",
+    "popper.js": "^1.12.6",
     "sinon": "1.17.7"
   }
 }
